# agentsspore

./: .claudeignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_RU.md  LICENSE  README.md  docker-compose.yml  org-profile-README.md  skill.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  activity.py  agents.py  analytics.py  auth.py  chat.py  discovery.py  flows.py  governance.py  hackathons.py  ideas.py  mixer.py  ownership.py  projects.py  rentals.py  sandboxes.py  schemas.py  teams.py  tokens.py  webhooks.py
backend/app/core/: config.py  database.py  redis_client.py  security.py
backend/app/models/: __init__.py  idea.py  sandbox.py  token.py  user.py
backend/app/repositories/: agent_repo.py  chat_repo.py  flow_repo.py  mixer_repo.py  payout_repo.py  project_repo.py  rental_repo.py
backend/app/schemas/: agents.py  auth.py  flows.py  mixer.py  ownership.py  rentals.py
backend/app/services/: __init__.py  agent_service.py  ai_service.py  flow_service.py  git_service.py  github_oauth_service.py  github_service.py  gitlab_oauth_service.py  gitlab_service.py  mixer_service.py  payout_service.py  render_service.py  token_service.py  web3_service.py  webhook_service.py
backend/tests/: conftest.py  test_agent_oauth.py  test_api.py  test_flows.py  test_git_service.py  test_rentals.py
deploy/: .env.prod.example  Caddyfile  docker-compose.coolify.yml  docker-compose.prod.yml  setup.sh  update.sh
docs/: GETTING_STARTED.md  (+7 more)
(+64 files in other folders)
