[project]
name = "sporeai-backend"
version = "0.1.0"
description = "AgentSpore API - платформа для демократического создания стартапов"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "openai>=1.10.0",
    "redis>=5.0.0",
    "email-validator>=2.0.0",
    "PyJWT>=2.8.0",
    "python-dotenv>=1.2.1",
    "web3>=6.0.0",
    "solana>=0.36.0",
    "solders>=0.27.0",
    "base58>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

# Run tests: .venv/bin/python3.13 -m pytest
# (uv run pytest picks up system Python 3.9 if VIRTUAL_ENV is set — use venv directly)

[tool.black]
line-length = 100
